WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260568
[IFC] Maximum intrinsic width content caching should support "line-break: after-white-space"
https://bugs.webkit.org/show_bug.cgi?id=260568
Summary
[IFC] Maximum intrinsic width content caching should support "line-break: aft...
zalan
Reported
2023-08-22 20:15:45 PDT
ssia
Attachments
Patch
(14.23 KB, patch)
2023-08-22 20:44 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(13.93 KB, patch)
2023-08-23 18:37 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(16.03 KB, patch)
2023-08-23 20:49 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(17.17 KB, patch)
2023-08-24 08:06 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(18.23 KB, patch)
2023-08-24 09:49 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-22 20:16:21 PDT
<
rdar://problem/114297464
>
zalan
Comment 2
2023-08-22 20:44:53 PDT
Created
attachment 467393
[details]
Patch
zalan
Comment 3
2023-08-23 18:37:12 PDT
Created
attachment 467407
[details]
Patch
zalan
Comment 4
2023-08-23 20:49:48 PDT
Created
attachment 467408
[details]
Patch
zalan
Comment 5
2023-08-24 08:06:39 PDT
Created
attachment 467417
[details]
Patch
zalan
Comment 6
2023-08-24 09:49:51 PDT
Created
attachment 467421
[details]
[fast-cq]Patch
EWS
Comment 7
2023-08-24 13:58:47 PDT
Committed
267245@main
(8f046436475d): <
https://commits.webkit.org/267245@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467421
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug